Bugfix#549 VM button icons unaligned
Fix the issue that chrome and IE won't align the VM action buttons

--- a/ui/css/theme-default/list.css
+++ b/ui/css/theme-default/list.css
@@ -234,9 +234,11 @@
     height: 42px;
 }
 
-.guest-actions .top button span {
-    margin-left: -3px;
-    margin-top: -1px;
+@-moz-document url-prefix() {
+    .guest-actions .top button span {
+        margin-left: -3px;
+        margin-top: -1px;
+    }
 }
 
 .guest-actions .bottom {
